# music-theory

./: README.md  pyproject.toml
examples/: creep.py  no_woman_no_cry.py
music_theory/: main.py
