[tool.poetry]
name = "music_theory"
version = "0.1.0"
description = ""
authors = ["Solal Attias <solalattias@gmail.com>"]
readme = "README.md"
packages = [{ include = "music_theory" }]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
